--- a/Day7/package.json
+++ b/Day7/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "await-to-js": "^3.0.0",
+    "joi-phone-number": "^5.1.1",
     "mysql2": "^3.6.2"
   }
 }
