--- a/Day7/package.json
+++ b/Day7/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "joi-phone-number": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.2"
+    "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7"
   }
 }
